--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "native_communication",
-    "slug": "native_communication",
+    "name": "Native Communication",
+    "slug": "Write code in Android and IOS.",
     "version": "1.0.0"
   }
 }
